# Rust-eHelply-SDK

./: Cargo.toml  README.md
.github/workflows/: publish-sdk.yml
.openapi-generator/: FILES
docs/: AddressBase.md  AlarmAcknowledge.md  AlarmAssign.md  AlarmCreate.md  AlarmIgnore.md  AlarmNote.md  AlarmResponse.md  AlarmTerminate.md  AlarmTicket.md  AppointmentBase.md  AppointmentResponse.md  AppointmentsApi.md  AttachPaymentToProject.md  Basic.md  BasicMeta.md  BasicMetaCreate.md  BillingApi.md  CatalogBase.md  CatalogReturn.md  CatalogsApi.md  CategoryApi.md  CategoryBase.md  CategoryDb.md  CategoryResponse.md  CompaniesApi.md  Company.md  CompanyBase.md  CompanyResponse.md  Contact.md  ContactBase.md  ContactMethod.md  ContactResponse.md  ContentApi.md  CreateField200Response.md  CreateFile200Response.md  CreateKeyResponse.md  CreateMeta200Response.md  CreateNote200Response.md  CreateNoteResponse.md  CreateProjectCredential.md  (+156 more)
src/apis/: appointments_api.rs  billing_api.rs  catalogs_api.rs  category_api.rs  companies_api.rs  configuration.rs  content_api.rs  default_api.rs  facts_api.rs  fields_api.rs  logging_api.rs  meta_api.rs  mod.rs  monitor_api.rs  notes_api.rs  places_api.rs  products_api.rs  projects_api.rs  reviews_api.rs  security_api.rs  staff_api.rs  support_api.rs  tag_api.rs  tags_api.rs  users_api.rs
src/models/: address_base.rs  alarm_acknowledge.rs  alarm_assign.rs  alarm_create.rs  alarm_ignore.rs  alarm_note.rs  alarm_response.rs  alarm_terminate.rs  alarm_ticket.rs  appointment_base.rs  appointment_response.rs  attach_payment_to_project.rs  (+164 more)
