[package]
name = "ehelply"
version = "1.1.116"
authors = ["eHelply Software Inc"]
description = "eHelply SuperStack SDK"
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
